moved around files

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 
 <body>
     <div class="bday-link">
-        <p><a href="adrian_2022.html" title="open birthday gift">adrian_2022</a></p>
+        <p><a href="src/html/adrian_2022.html" title="open birthday gift">adrian_2022</a></p>
     </div>
 </body>
