--- a/src/html/adrian_2022.html
+++ b/src/html/adrian_2022.html
@@ -31,7 +31,7 @@
         <h3>It's you birthday! Congratulations!</h3>
         <p>Drag the cake into the oven to bake it!</p>
     </div>
-    <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)">
+    <div id="div1" ondragover="allowDrop(event)" ondrop="drop(event)">
         <img id="drag1" src="/img/cake_batter.png" draggable="true" ondragstart="drag(event)" width="130" height="90">
     </div>
     <div id="div2">
@@ -39,8 +39,8 @@
     </div>
 </body>
 
-<audio controls autoplay>
-    <source src="auido/seventeen.mp3" type="audio/mpeg" />
+<audio autoplay loop>
+    <source src="auido/seventeen.mp3" type="audio/mp3" />
 </audio>
 
 </html>
