--- a/src/html/adrian_2022.html
+++ b/src/html/adrian_2022.html
@@ -40,7 +40,7 @@
 </body>
 
 <audio autoplay loop>
-    <source src="auido/seventeen.mp3" type="audio/mp3" />
+    <source src="/src/audio/seventeen.mp3" type="audio/mp3" />
 </audio>
 
 </html>
