--- a/src/html/adrian_2022.html
+++ b/src/html/adrian_2022.html
@@ -14,16 +14,16 @@
         ev.preventDefault();
         var data = ev.dataTransfer.getData("text");
         ev.target.appendChild(document.getElementById(data));
-        document.getElementById("drag1").style.display = "none";
-        document.getElementById("drag2").style.display = "block";
+        //document.getElementById("drag1").style.display = "none";
+        //document.getElementById("drag2").style.display = "block";
     }
 
-    function mlem() {
+    function mlem(ev) {
         document.getElementById("drag2").style.display = "none";
     }
 </script>
 
-<body onload="mlem()">
+<body onload="mlem(event)">
     <div class="horizontal-box">
         <h1>Happy Birthday!</h1>
     </div>
@@ -36,8 +36,8 @@
             <img id="drag1" src="/img/cake_batter.png" draggable="true" ondragstart="drag(event)" width="130"
                 height="90">
         </div>
-        <div class="small-grid" id="div2">
-            <img id="drag2" src="/img/cake_cooked.png" draggable="false" width="130" height="90">
+        <div class="small-grid2" id="div2">
+            <!--<img id="drag2" src="/img/cake_cooked.png" draggable="false" width="130" height="90">-->
         </div>
     </div>
 
