--- a/src/html/adrian_2022.html
+++ b/src/html/adrian_2022.html
@@ -14,7 +14,7 @@
         ev.preventDefault();
         var data = ev.dataTransfer.getData("text");
         ev.target.appendChild(document.getElementById(data));
-        //document.getElementById("drag1").style.display = "none";
+        document.getElementById("drag1").style.display = "none";
         //document.getElementById("drag2").style.display = "block";
     }
 
@@ -31,14 +31,13 @@
     </div>
     <div class="flex-container">
         <div class="small-grid">
-            <div id="div1" ondragover="allowDrop(event)" ondrop="drop(event)">
+            <div id="div1">
                 <img id="drag1" src="/img/cake_batter.png" draggable="true" ondragstart="drag(event)" width="130"
                     height="90">
             </div>
         </div>
 
-        <div class="small-grid2" id="div2">
-            <img id="drag2" src="/img/cake_cooked.png" width="130" height="90">
+        <div class="small-grid2" id="div2" ondragover="allowDrop(event)" ondrop="drop(event)">
         </div>
     </div>
 
