--- a/src/html/adrian_2022.html
+++ b/src/html/adrian_2022.html
@@ -18,7 +18,8 @@
         //document.getElementById("drag2").style.display = "block";
     }
     document.addEventListener("dragend", function (event) {
-        document.getElementById("drag2").style.display = "block";
+        let newimg = document.getElementById("ogdrag2");
+        newimg.src = "/img/cake_candleflicker.gif";
         document.getElementById("drag1").style.display = "none";
     });
 </script>
@@ -34,7 +35,8 @@
             <img id="drag1" src="/img/cake_batter.png" draggable="true" ondragstart="drag(event)">
         </div>
         <div class="small-grid2" id="div2" ondragover="allowDrop(event)" ondrop="drop(event)">
-            <img id="drag2" src="/img/cake_candleflicker.gif" draggable="false" width="130" height="90">
+            <img id="ogdrag2" src="/img/oven.png" draggable="false">
+            <!--<img id="drag2" src="/img/cake_candleflicker.gif" draggable="false">-->
         </div>
     </div>
 
