mobile support for drag

--- a/src/html/adrian_2022.html
+++ b/src/html/adrian_2022.html
@@ -19,6 +19,7 @@
         newimg.src = "/img/cake_candleflicker.gif";
         document.getElementById("drag1").style.display = "none";
     }
+
 </script>
 
 <body>
@@ -42,5 +43,6 @@
 <audio autoplay loop>
     <source src="/src/audio/seventeen.mp3" type="audio/mp3" />
 </audio>
+<script src="scripts/DragDropTouch.js"></script>
 
 </html>
