--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <meta name="viewport" content="width=device-width, inital-scale=1.0">
 
-<h1>Funky Bday Gift Down Below</h1>
+<h3>Cutting the Line</h3>
+
+<body>
+</body>
+
+<h3>Funky Bday Gift Down Below</h3>
 
 <body>
     <div class="bday-link">
