--- a/src/html/adrian_2022.html
+++ b/src/html/adrian_2022.html
@@ -22,7 +22,7 @@
 </script>
 
 <body>
-    <h1>Happy Birthday Adrian "Ares" "Lysander" "Thomas Diaforus" "etc" Rocha!</h1>
+    <h1>Happy Birthday Adrian "Ares" "Lysander" "Berald" "etc" Rocha!</h1>
     <div>
         <h3>It's you birthday! Congratulations on making it to the double digits!</h3>
         <p>Drag the cake into the oven to bake it!</p>
