--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 <body>
 </body>
 
+<h3>Mother's Day Site :D</h3>
+<body>
+            <p><a href="src/html/mother_day.html" title="open link">mom 2024</a></p>
+</body>
+
 <h3>Funky Bday Gift Down Below</h3>
 
 <body>
