--- a/src/html/mother_day.html
+++ b/src/html/mother_day.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<meta name="viewport" content="width=device-width, inital-scale=1.0">
 
+<body>
+    <h1>母情节快乐！！</h1>
+    <div>
+        <p>抱歉，我这几天好忙，我买不起花-- 能麻烦你自己采一朵花吗?</p>
+    </div>
+    <div class="flex-container">
+        <div class="small-grid" id="div1">
+            <img id="drag1" src="/img/cake_batter.png">
+<!-- clickable flowers, put in vase, go get other stuff for mother's day> -->
+        </div>
+    </div>
+
+</body>
+
+<audio autoplay loop>
+    <source src="/src/audio/seventeen.mp3" type="audio/mp3" />
+</audio>
+
+</html>
