--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <body>
             <h3>Mother's Day Site :D</h3>
-            <p><a href="src/html/mother_day.html" title="open link">mom 2024</a></p>
+            <p><a href="src/html/mother_day.html" title="open link">mom_2024</a></p>
 </body>
 <!--
 <h4>Funky Bday Gift Down Below</h4>
