--- a/src/html/mother_day.html
+++ b/src/html/mother_day.html
@@ -8,15 +8,18 @@
     </div>
     <div class="flex-container">
         <div class="small-grid" id="div1">
-            <img id="drag1" src="/img/cake_batter.png">
+            <p style="background-image: url('/img/flower_field.png');"></p>
+            <img id="questflor" src="/img/flowers/sad.png">
+            <img id="randflor" src="/img/flowers/000.png">
+            <img id="randflor" src="/img/flowers/002.png">
+            <img id="randflor" src="/img/flowers/003.png">
+            <img id="randflor" src="/img/flowers/004.png">
+            <img id="randflor" src="/img/flowers/005.png">
+            <img id="randflor" src="/img/flowers/006.png">
 <!-- clickable flowers, put in vase, go get other stuff for mother's day> -->
         </div>
     </div>
 
 </body>
-
-<audio autoplay loop>
-    <source src="/src/audio/seventeen.mp3" type="audio/mp3" />
-</audio>
 
 </html>
