--- a/src/html/mother_day.html
+++ b/src/html/mother_day.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, inital-scale=1.0">
-
+<style>
+    body {
+      background-image: url("/img/flowerfield.png");
+    }
+    </style>
 <body>
     <h1>母情节快乐！！</h1>
     <div>
         <p>抱歉，我这几天好忙，我买不起花-- 能麻烦你自己采一朵花吗?</p>
-        <p style="background-image: url('/img/flower_field.png');"></p>
     </div>
     <div class="flex-container">
         <div class="small-grid" id="div1">
