--- a/src/html/mother_day.html
+++ b/src/html/mother_day.html
@@ -13,9 +13,16 @@
     <div class="flex-container">
         <div class="small-grid" id="div1">
             <img id="randflor" src="/img/flowers/000.png">
+        </div>
+        <div class="small-grid" id="div2">
             <img id="randflor" src="/img/flowers/002.png">
+        </div>
+        <div class="small-grid" id="div3">
             <img id="randflor" src="/img/flowers/003.png">
+        </div>
+        <div class="small-grid" id="div4">
             <img id="randflor" src="/img/flowers/004.png">
+        </div>
             <img id="randflor" src="/img/flowers/005.png">
             <img id="randflor" src="/img/flowers/006.png">
 <!-- clickable flowers, put in vase, go get other stuff for mother's day> -->
