--- a/src/html/mother_day.html
+++ b/src/html/mother_day.html
@@ -12,19 +12,23 @@
     </div>
     <div class="flex-container">
         <div class="small-grid" id="div1">
-            <img id="randflor0" src="/img/flowers/000.png">
+            <img class="clickyflor" src="/img/flowers/000.png">
         </div>
         <div class="small-grid" id="div2">
-            <img id="randflor1" src="/img/flowers/002.png">
+            <img class="clickyflor" src="/img/flowers/002.png">
         </div>
         <div class="small-grid" id="div3">
-            <img id="randflor2" src="/img/flowers/003.png">
+            <img class="clickyflor" src="/img/flowers/003.png">
         </div>
         <div class="small-grid" id="div4">
-            <img id="randflor3" src="/img/flowers/004.png">
+            <img class="clickyflor" src="/img/flowers/004.png">
         </div>
-            <img id="randflor4" src="/img/flowers/005.png">
-            <img id="randflor5" src="/img/flowers/006.png">
+        <div class="small-grid" id="div5">
+            <img class="clickyflor" src="/img/flowers/005.png">
+        </div>
+        <div class="small-grid" id="div5">
+            <img class="clickyflor" src="/img/flowers/006.png">
+        </div>
 <!-- clickable flowers, put in vase, go get other stuff for mother's day> -->
         </div>
     </div>
