--- a/src/html/mother_day.html
+++ b/src/html/mother_day.html
@@ -8,7 +8,7 @@
 <body>
     <h1>母情节快乐！！</h1>
     <div>
-        <p>抱歉，我这几天好忙，我买不起花-- 能麻烦你自己采一朵花吗?</p>
+        <p>抱歉，我这几天好忙，我买不起花-- 能麻烦你自己采几朵花吗?</p>
     </div>
     <div class="flex-container">
         <div class="small-grid" id="div1">
