--- a/src/html/mother_day.html
+++ b/src/html/mother_day.html
@@ -11,22 +11,22 @@
         <p>抱歉，我这几天好忙，我买不起花-- 能麻烦你自己采几朵花吗?</p>
     </div>
     <div class="flex-container">
-        <div class="small-grid" id="div1">
+        <div class="small-grid" id="div1" onclick="clickFlor(this)">
             <img class="clickyflor" src="/img/flowers/000.png">
         </div>
-        <div class="small-grid" id="div2">
+        <div class="small-grid" id="div2" onclick="clickFlor(this)">
             <img class="clickyflor" src="/img/flowers/002.png">
         </div>
-        <div class="small-grid" id="div3">
+        <div class="small-grid" id="div3" onclick="clickFlor(this)">
             <img class="clickyflor" src="/img/flowers/003.png">
         </div>
-        <div class="small-grid" id="div4">
+        <div class="small-grid" id="div4" onclick="clickFlor(this)">
             <img class="clickyflor" src="/img/flowers/004.png">
         </div>
-        <div class="small-grid" id="div5">
+        <div class="small-grid" id="div5" onclick="clickFlor(this)">
             <img class="clickyflor" src="/img/flowers/005.png">
         </div>
-        <div class="small-grid" id="div5">
+        <div class="small-grid" id="div5" onclick="clickFlor(this)">
             <img class="clickyflor" src="/img/flowers/006.png">
         </div>
 <!-- clickable flowers, put in vase, go get other stuff for mother's day> -->
@@ -34,5 +34,19 @@
     </div>
 
 </body>
+
+<script>
+var id = null;
+function clickFlor(clicked){
+    var element = clicked;
+    clearInterval(id)
+    id = setInterval(flowerpicked, 20);
+    var pos = 0;
+    function flowerpicked(){
+        if 
+    }
+    
+}
+</script>
 
 </html>
