--- a/src/html/mother_day.html
+++ b/src/html/mother_day.html
@@ -37,8 +37,7 @@
 
 <script>
 var id = null;
-function clickFlor(clicked){
-    var element = clicked;
+function clickFlor(elem){
     clearInterval(id)
     id = setInterval(flowerpicked, 20);
     var pos = 0;
