Created Divisions for Flower Placement

--- a/src/html/mother_day.html
+++ b/src/html/mother_day.html
@@ -11,22 +11,12 @@
         <p>抱歉，我这几天好忙，我买不起花-- 能麻烦你自己采几朵花吗?</p>
     </div>
     <div class="grid-container">
-        <img onclick="clickFlor(this)" class="clickyflor" src="/img/flor_individuals/000.png">
-        <div class="florbox" id="div2" onclick="clickFlor(this)">
-            <img class="clickyflor" src="/img/flor_individuals/002.png">
-        </div>
-        <div class="florbox" id="div3" onclick="clickFlor(this)">
-            <img class="clickyflor" src="/img/flor_individuals/003.png">
-        </div>
-        <div class="florbox" id="div4" onclick="clickFlor(this)">
-            <img class="clickyflor" src="/img/flor_individuals/004.png">
-        </div>
-        <div class="florbox" id="div5" onclick="clickFlor(this)">
-            <img class="clickyflor" src="/img/flor_individuals/005.png">
-        </div>
-        <div class="florbox" id="div5" onclick="clickFlor(this)">
-            <img class="clickyflor" src="/img/flor_individuals/006.png">
-        </div>
+        <img onclick="clickFlor(this)" class="clickyflor" id="flor1" src="/img/flor_individuals/000.png">
+        <img onclick="clickFlor(this)" class="clickyflor" id="flor2" src="/img/flor_individuals/002.png">
+        <img onclick="clickFlor(this)" class="clickyflor" id="flor3" src="/img/flor_individuals/003.png">
+        <img onclick="clickFlor(this)" class="clickyflor" id="flor4" src="/img/flor_individuals/004.png">
+        <img onclick="clickFlor(this)" class="clickyflor" id="flor5" src="/img/flor_individuals/005.png">
+        <img onclick="clickFlor(this)" class="clickyflor" id="flor6" src="/img/flor_individuals/006.png">
         <!-- sad flower -->
         <img class="clickyflor" src="/img/flor_individuals/sad.png">
         </div>
