--- a/src/html/mother_day.html
+++ b/src/html/mother_day.html
@@ -38,8 +38,8 @@ function clickFlor(elem){
             elem.onclick = null;
         }else{
             pos++;
-            opacity -= 0.05;
-            elem.style.top = pos + 'px';
+            opacity -= 0.005;
+            elem.style.top = pos + '5px';
             elem.style.opacity = opacity;
         }
     }
