--- a/src/html/mother_day_quest.html
+++ b/src/html/mother_day_quest.html
@@ -1,20 +1,134 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width">
 <link rel="stylesheet" href="mother.css">
+<title>母情节快乐</title>
 <style>
     body {
       background-color:#B7E6F3;
     }
 </style>
 
-<body>
+<header>
     <h2>这只花为什么伤心啊？</h2>
     <h4>我们来问问它</h4>
+</header>
 
-    <div>
-        <div class="flor-zoom">
-            <img src="/img/flor_individuals/sad.png">
-        </div>
-        
-    </div>
+<body>
+	
+	<div id='mainbox'>
+			<div id='spritebox'> 
+				<img src="/flor_individuals/sad.png">
+			</div>
+			<div id='textbox'>
+				<p>text</p>
+                <div id="optionsbox">
+
+                </div>
+			</div>
+		</div>
+
 </body>
+
+<script>
+    // Creates the HTML and inserts it into the document 
+/* **SUPER IMPORTANT**  PUT THE URL OF THE JSON FILE WHERE YOU INSERTED ALL YOUR DATA HERE !! */
+const vnData = '/quest.json';
+
+// Creates constants based off of the HTML created
+const $textbox = document.querySelector("#textbox p");
+const $optionsbox = document.querySelector('#optionsbox');
+const $spritebox = document.querySelector("#spritebox img");
+
+// Other variables we will be using later on
+
+let json, to;
+
+//Tracks what "Page Number" the user is on
+var pageNum = 0;
+var currentPage;
+
+async function grabData() {
+	// Load the data
+	
+	/* Fetches the data from the server */
+	const resp = await fetch(vnData)
+
+	/* Putting the data into an array */
+	json = await resp.json();
+	
+	currentPage = Object.keys(json.Scene1.PAGES)[pageNum];
+	
+	// Initialize the data 
+	initialize(json);
+	handleOptions(json);
+	
+}
+
+// Initializes the data & also handles page turning 
+async function initialize(data){
+	
+	//cleans it all
+	$spritebox.src = '';
+	$textbox.innerText = ''; 
+	
+	//Changes appropriate HTML elements to the new attributes based on the data given when page turns/ program is initialized
+	$spritebox.src = data.Character.Flower;
+	
+	$textbox.innerText = data.Scene1.PAGES[currentPage].PageText; 
+	
+}
+
+function handleOptions(data){
+	
+	//Cleans it out
+	$optionsbox.innerHTML = "";
+
+	if(data.Scene1.PAGES[currentPage].hasOwnProperty('Options')){
+		var o = data.Scene1.PAGES[currentPage].Options;
+		var str = Object.keys(o).forEach(k => {
+			const row = document.createElement('div');
+			row.innerHTML = `${k}`
+			$optionsbox.appendChild(row);
+			row.addEventListener('click', () => { 
+				currentPage = (o[k]);
+				pageNum = Object.keys(json.Scene1.PAGES).indexOf(currentPage);
+				initialize(json); 
+				$optionsbox.innerHTML = "";
+			})
+			
+		})
+	}
+	
+}
+
+function checkPage(data){
+	if(data.Scene1.PAGES[currentPage].hasOwnProperty('Options')) return false;
+	if(data.Scene1.PAGES[currentPage].hasOwnProperty('NextPage')) {
+		if(data.Scene1.PAGES[currentPage].NextPage == "End") return false;
+	}
+	
+	return true;
+}
+
+//Handles page turning when right or left arrow key is pressed 
+document.addEventListener('keydown', (e) => {
+	if(!json) return;
+	if(e.key == "ArrowRight" && checkPage(json)){
+		
+		if(json.Scene1.PAGES[currentPage].hasOwnProperty('NextPage')){
+			currentPage = json.Scene1.PAGES[currentPage].NextPage;
+		}
+		else {
+			pageNum++;
+			currentPage = Object.keys(json.Scene1.PAGES)[pageNum];
+		}
+		
+		initialize(json);
+		handleOptions(json);
+	}
+	else return;
+});
+
+//Grabs the json data from the server
+grabData();
+</script>
