--- a/src/html/mother_day.html
+++ b/src/html/mother_day.html
@@ -19,7 +19,7 @@
         <img onclick="clickFlor(this)" class="clickyflor" id="flor5" src="/img/flor_individuals/005.png">
         <img onclick="clickFlor(this)" class="clickyflor" id="flor6" src="/img/flor_individuals/006.png">
         <!-- sad flower -->
-        <a href='src/html/mother_day_quest.html'>
+        <a href='/mother_day_quest.html'>
             <img src="/img/flor_individuals/sad.png">
         </a>
         
