--- a/src/html/mother_day_quest.html
+++ b/src/html/mother_day_quest.html
@@ -16,21 +16,20 @@
 <body>
 	
 	<div id='mainbox'>
-			<div id='spritebox'> 
+		<div id='spritebox'> 
 				
 			</div>
-			<div id='textbox'>
-				<p>text</p>
-                <div id="optionsbox">
+		<div id='textbox'>
+			<p>text</p>
+            <div id="optionsbox">
 
-                </div>
-			</div>
+            </div>
 		</div>
+	</div>
 
 </body>
 
 <script>
-const vnData = '/quest.json';
 
 // Creates constants based off of the HTML created
 const $textbox = document.querySelector("#textbox p");
@@ -49,7 +48,7 @@ async function grabData() {
 	// Load the data
 	
 	/* Fetches the data from the server */
-	const resp = await fetch(vnData)
+	const resp = await fetch('/src/html/quest.json')
 
 	/* Putting the data into an array */
 	json = await resp.json();
