--- a/src/html/mother_day_quest.html
+++ b/src/html/mother_day_quest.html
@@ -48,7 +48,7 @@ async function grabData() {
 	// Load the data
 	
 	/* Fetches the data from the server */
-	const resp = await fetch('/src/html/quest.json')
+	const resp = await fetch('src/html/quest.json')
 
 	/* Putting the data into an array */
 	json = await resp.json();
