--- a/src/html/mother_day_quest.html
+++ b/src/html/mother_day_quest.html
@@ -69,7 +69,7 @@ async function initialize(data){
 	$textbox.innerText = ''; 
 	
 	//Changes appropriate HTML elements to the new attributes based on the data given when page turns/ program is initialized
-	$spritebox.src = data.Character.Flower;
+	$spritebox.src = "/img/flor_individuals/sad.png";
 	
 	$textbox.innerText = data.Scene1.PAGES[currentPage].PageText; 
 	
