--- a/src/html/mother_day_quest.html
+++ b/src/html/mother_day_quest.html
@@ -15,10 +15,10 @@
 
 <body>
 	
+    <div id='spritebox'> 
+        <img src="/img/flor_individuals/sad.png">
+    </div>
 	<div id='mainbox'>
-		<div id='spritebox'> 
-				<img src="">
-		</div>
         <div id="optionsbox">
 
         </div>
@@ -34,7 +34,6 @@
 // Creates constants based off of the HTML created
 const $textbox = document.querySelector("#textbox p");
 const $optionsbox = document.querySelector('#optionsbox');
-const $spritebox = document.querySelector("#spritebox img");
 
 // Other variables we will be using later on
 
