--- a/src/html/mother_day_quest.html
+++ b/src/html/mother_day_quest.html
@@ -4,7 +4,7 @@
 <title>母情节快乐</title>
 <style>
     body {
-      background-image:"/img/flor_individuals/bg_flower.png"
+      background-image: url("/img/bg_flower.png");
     }
 </style>
 
