--- a/src/html/mother_day_quest.html
+++ b/src/html/mother_day_quest.html
@@ -113,7 +113,7 @@ document.addEventListener('keydown', (e) => {
 		}
 		else {
 			pageNum++;
-			currentPage = Object.keys(json.Scene1.PAGES)[pageNum];
+			currentPage = json.Scene1.PAGES[currentPage].NextPage;
 		}
 		
 		initialize(json);
