--- a/src/html/mother_day_quest.html
+++ b/src/html/mother_day_quest.html
@@ -23,7 +23,7 @@
 			<p>text</p>
 		</div>
 	</div>
-    <div class='spritebox'> 
+    <div id='spritebox'> 
         <img src="/img/flor_individuals/sad.png">
     </div>
 
