--- a/src/html/mother_day_quest.html
+++ b/src/html/mother_day_quest.html
@@ -68,7 +68,9 @@ async function initialize(data){
 	//Changes appropriate HTML elements to the new attributes based on the data given when page turns/ program is initialized
 	
 	$textbox.innerText = data.Scene1.PAGES[currentPage].PageText; 
-	$optionsbox.innerHTML = data.Scene1.PAGES[currentPage].Options;
+
+	const row = document.createElement('div');
+	row.innerHTML = data.Scene1.PAGES[currentPage].Options[0];
 	$optionsbox.addEventListener('click', () => {
 		currentPage = json.Scene1.PAGES[currentPage].NextPage;
 		pageNum = Object.keys(json.Scene1.PAGES).indexOf(currentPage);
@@ -110,11 +112,11 @@ document.addEventListener('keydown', (e) => {
 	if(e.key == "ArrowRight" && checkPage(json)){
 		
 		if(json.Scene1.PAGES[currentPage].hasOwnProperty('NextPage')){
-			currentPage = json.Scene1.PAGES[currentPage].NextPage;
-
 			if(json.Scene1.PAGES[currentPage].NextPage == "End"){
 				window.location.href="mother_day_ending.html"
 			};
+			currentPage = json.Scene1.PAGES[currentPage].NextPage;
+			
 		}
 		else {
 			pageNum++;
