--- a/src/html/mother_day_ending.html
+++ b/src/html/mother_day_ending.html
@@ -10,6 +10,6 @@
 
 <body>
     <div class="final-text">
-        <p>虽然我平常能每天和你联系，我还觉得我说的不够。妈妈，我爱你。对你，我永远是你的可爱的小女儿。可是，我现在长大了，搬家了。我要感谢你把我养成一个能每天开心的姑娘。虽然我的中文不太好，我希望我的感情能沟道你。你每次会告诉我，可惜小时候没报够。以后回家的时候，你不用这样想了。什么时候都能报。母情节快乐！</p>
+        <p>虽然我平常能每天和你联系，我还觉得我说的不够。妈妈，我爱你。对你，我永远是你的可爱的小女儿。可是，我现在长大了，搬家了。我要感谢你把我养成一个能每天开心的姑娘。虽然我的中文不太好，我希望我的感情能沟道你。你每次会告诉我，可惜小时候没抱够。以后回家的时候，你不用这样想了。随时都能抱。母情节快乐！</p>
     </div>
 </body>
