--- a/src/html/mother_day_quest.html
+++ b/src/html/mother_day_quest.html
@@ -91,7 +91,7 @@ function checkPage(data){
 //Handles page turning when right or left arrow key is pressed 
 document.addEventListener('keydown', (e) => {
 	if(!json) return;
-	if(e.key == "Space" && checkPage(json)){
+	if(e.key == "ArrowLeft" && checkPage(json)){
 		
 		if(json.Scene1.PAGES[currentPage].hasOwnProperty('NextPage')){
 			if(json.Scene1.PAGES[currentPage].NextPage == "End"){
