got rid of redundant things

--- a/index.html
+++ b/index.html
@@ -3,4 +3,6 @@
 <body>
             <h3>Mother's Day Site :D</h3>
             <p><a href="src/html/mother_day.html" title="open link">mom_2024</a></p>
+            <h3>Nothing Shady Here</h3>
+            <p><a href="src/html/ytmp3.html" title="open link">ytdlp</a></p>
 </body>
