--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <body>
             <h3>Mother's Day Site :D</h3>
-            <p><a href="src/html/mother_day.html" title="open link">mom_2024</a></p>
-            <h3>Nothing Shady Here</h3>
-            <p><a href="src/html/ytmp3.html" title="open link">ytdlp</a></p>
+            <p><a href="src/html/mother/mother_day.html" title="open link">mom_2024</a></p>
+            <h3>Birthday Gifts</h3>
+            <p><a href="src/html/cae_bday_2025.html" title="open link">cae_2025</a></p>
 </body>
